# Legal-AI-

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 906603983c11_initial_migration.py
data/raw/: sample_legal_docs.jsonl
src/: main.py
src/api/: dependencies.py
src/api/v1/: router.py
src/api/v1/endpoints/: admin.py  auth.py  chat.py
src/app/routers/: health.py
src/core/: config.py  exceptions.py  logging.py
src/data/: db.py  models.py  schemas.py
src/data/crud/: chat.py  user.py
src/ml/: embeddings.py  generation.py  llm.py  loader.py  rag_engine.py
src/scripts/: run_ingestion.py  test_embedding.py  verify_qdrant.py
src/services/: auth_service.py  ingestion_service.py  rag_service.py
tests/: conftest.py
tests/api/: test_auth.py
